Mise à jour du responsive

--- a/Benefits.html
+++ b/Benefits.html
@@ -48,24 +48,24 @@
     </section>
 
     <!-- Deuxième section -->
-        <section class="community abouts">
+        <section class="community abouts Benefits">
             <div class="community-container abouts-container">
                 <div class="about-both">
-                    <div class="about-only">
+                    <div class="about-only special-width">
                         <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
                         <h3 class="service-title">Shoppings</h3>
                         <p>
                             Piketplace shopping offers a seamless, user-friendly experience for selecting and purchasing items within the Pi Network ecosystem
                         </p>
                     </div>
-                    <div class="about-only">
+                    <div class="about-only special-width">
                         <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
                         <h3 class="service-title">Sellings</h3>
                         <p>
                             The Sellings feature on Piketplace allows sellers to list and showcase products or services, reaching a broad audience and maximizing sales opportunities
                         </p>
                     </div>
-                    <div class="about-only">
+                    <div class="about-only special-width">
                         <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
                         <h3 class="service-title">Shipping</h3>
                         <p>
@@ -88,7 +88,7 @@
         </section>
 
     <!-- Section à propos -->
-    <div class="body-white">
+    <div class="body-white Benefits-white">
         <section class="about-container">
         <div class="about-us">
             <div>
