--- a/about.html
+++ b/about.html
@@ -92,10 +92,7 @@
             <div class="community-container">
                 <h2 class="community-subtitle">Our Team Members</h2>
                 <div class="our-team">
-                    <figure class="team-member">
-                        <img src="./images/Filano.png" alt="Image Lucien KOEKOU (Filano)">
-                        <legend>Lucien KOEKOU (Filano)</legend>
-                    </figure>
+                    <figure class="team-member"><img src="./images/Filano.png" alt="Image Lucien KOEKOU (Filano)"><legend>Lucien KOEKOU (Filano)</legend></figure>
                     <figure class="team-member">
                         <img src="./images/Djedje.png" alt="Image Adjé SEWOVON (Djedje)">
                         <legend>Adjé SEWOVON (Djedje)</legend>
